# ida-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE  README.md
.github/workflows/: rust.yml
examples/: real_world_test.rs
src/: lib.rs
