[package]
name = "ida-rs"
version = "0.1.1"
edition = "2024"
description = "A thread-safe, no_std, sparse ID allocator using a radix tree. Ideal for systems programming."
repository = "https://github.com/TomGoh/ida-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["id", "allocator", "no_std", "sparse", "kernel"]
categories = ["no-std", "data-structures", "concurrency"]

[dependencies]
spin = "0.10.0"